[package]
name = "pelican"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
sdl2 = { version = "0.35.1", features = ["unsafe_textures", "image", "ttf"] }

[[example]]
name = "graphics"

[[example]]
name = "ui"

[[example]]
name = "textbychar"

[[test]]
name = "main_thread_tests"
path = "main_thread_tests/main.rs"
harness = false
