[package]
name = "pelican"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
sdl2 = { version = "0.35.1", features = ["unsafe_textures", "image", "ttf"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"

[[example]]
name = "graphics"

[[example]]
name = "ui"

[[example]]
name = "label"

[[example]]
name = "scroll"

[[example]]
name = "text_field"

[[example]]
name = "pan_gesture"

[[example]]
name = "debug_textbychar"

[[test]]
name = "main_thread_tests"
path = "main_thread_tests/main.rs"
harness = false
