[package]
name = "pelican"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
unicode-segmentation = "1.8.0"
regex = "1.5.5"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["unsafe_textures", "ttf", "image", "gfx", "mixer", "static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.07.25"

[[example]]
name = "graphics"

[[example]]
name = "ui"

[[example]]
name = "label"

[[example]]
name = "scroll"

[[example]]
name = "text_field"

[[example]]
name = "pan_gesture"

[[test]]
name = "main_thread_tests"
path = "main_thread_tests/main.rs"
harness = false
